--- a/index.html
+++ b/index.html
@@ -18,128 +18,152 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="page-header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo header-logo">Web<span class="logo-part">Studio</span></a>
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo header-logo">Web<span class="logo-part">Studio</span></a>
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main content of the page -->
     <main class="page-main">
       <!-- Hero section with a call to action -->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <!-- Section with a brief description of the studio -->
       <section class="section-description">
-        <h2 hidden>Advantages</h2>
-        <ul class="description-list">
-          <li class="description-item">
-            <h3 class="description-title">Strategy</h3>
-            <p class="description-text">
-              Our goal is to identify the business problem to walk away with the perfect and creative solution.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="description-title">Punctuality</h3>
-            <p class="description-text">
-              Bring the key message to the brand's audience for the best price within the shortest possible time.
-            </p>
-          </li>
-          <li class="description-item">
-            <h3 class="description-title">Diligence</h3>
-            <!-- prettier-ignore -->
-            <p class="description-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li class="description-item">
-            <h3 class="description-title">Technologies</h3>
-            <p class="description-text">
-              Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container description-container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="description-list">
+            <li class="description-item">
+              <h3 class="description-title">Strategy</h3>
+              <p class="description-text">
+                Our goal is to identify the business problem to walk away with the perfect and creative solution.
+              </p>
+            </li>
+            <li class="description-item">
+              <h3 class="description-title">Punctuality</h3>
+              <p class="description-text">
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
+              </p>
+            </li>
+            <li class="description-item">
+              <h3 class="description-title">Diligence</h3>
+              <!-- prettier-ignore -->
+              <p class="description-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li class="description-item">
+              <h3 class="description-title">Technologies</h3>
+              <p class="description-text">
+                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section with team members -->
       <section class="section-team">
-        <h2 class="team-main-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img src="./images/MarkGuerrero.jpg" width="264" height="260" alt="photo Mark Guerrero" />
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/TomFord.jpg" width="264" height="260" alt="photo Tom Ford" />
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/CamilaGarcia.jpg" width="264" height="260" alt="photo Camila Garcia" />
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/DanielWilson.jpg" width="264" height="260" alt=" photo Daniel Wilson" />
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="team-main-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img src="./images/MarkGuerrero.jpg" width="264" height="260" alt="photo Mark Guerrero" />
+              <h3 class="team-title">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/TomFord.jpg" width="264" height="260" alt="photo Tom Ford" />
+              <h3 class="team-title">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/CamilaGarcia.jpg" width="264" height="260" alt="photo Camila Garcia" />
+              <h3 class="team-title">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/DanielWilson.jpg" width="264" height="260" alt=" photo Daniel Wilson" />
+              <h3 class="team-title">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section with portfolio items -->
       <section class="section-portfolio">
-        <h2 class="portfolio-main-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img src="./images/banking-app.jpg" width="360" height="300" alt="banking app" />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/cashless-payment.jpg" width="360" height="300" alt="cashless payment" />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/meditation-app.jpg" width="360" height="300" alt="meditation app" />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/taxi-service.jpg" width="360" height="300" alt="taxi service" />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/screen-illustrations.jpg" width="360" height="300" alt="screen illustrations" />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/online-courses.jpg" width="360" height="300" alt="online courses" />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-main-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/banking-app.jpg" width="360" height="300" alt="banking app" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/cashless-payment.jpg" width="360" height="300" alt="cashless payment" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/meditation-app.jpg" width="360" height="300" alt="meditation app" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/taxi-service.jpg" width="360" height="300" alt="taxi service" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/screen-illustrations.jpg" width="360" height="300" alt="screen illustrations" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img src="./images/online-courses.jpg" width="360" height="300" alt="online courses" />
+              <div class="portfolio-text-container">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="logo footer-logo">Web<span class="logo-part">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo footer-logo">Web<span class="logo-part">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
