--- a/index.html
+++ b/index.html
@@ -85,23 +85,31 @@
           <ul class="team-list">
             <li class="team-item">
               <img src="./images/MarkGuerrero.jpg" width="264" height="260" alt="photo Mark Guerrero" />
-              <h3 class="team-title">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-item-text">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/TomFord.jpg" width="264" height="260" alt="photo Tom Ford" />
-              <h3 class="team-title">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-item-text">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/CamilaGarcia.jpg" width="264" height="260" alt="photo Camila Garcia" />
-              <h3 class="team-title">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-item-text">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/DanielWilson.jpg" width="264" height="260" alt=" photo Daniel Wilson" />
-              <h3 class="team-title">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-item-text">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
